--- a/lang/en.yml
+++ b/lang/en.yml
@@ -4,7 +4,10 @@ en:
   YubikeyAuthenticator:
     ENABLED: 'Yubikey Authentication Enabled'
     ENABLEDDESCRIPTION: 'If the user is new and doesn''t have a Yubikey yet, you can disable the auth temporarily'
-    ERRORYUBIKEY: 'Yubikey error'
+    ERRORMAXYUBIKEY: 'Maximum login without yubikey exceeded'
+    ERRORYUBIKEY: 'Yubikey authentication error'
+    NOTAVAILABLE: 'This option is not yet available'
+    NOYUBIKEYCOUNT: 'Login count without yubikey'
     TITLE: 'Yubikey login'
     YUBIKEY: 'Yubikey code'
     YUBIKEYDESCRIPTION: 'Unique identifier string for the Yubikey'
