Limit the amount of logins without Yubikey for days or amount of logins.

--- a/lang/en.yml
+++ b/lang/en.yml
@@ -5,7 +5,10 @@ en:
     ENABLED: 'Yubikey Authentication Enabled'
     ENABLEDDESCRIPTION: 'If the user is new and doesn''t have a Yubikey yet, you can disable the auth temporarily'
     ERRORMAXYUBIKEY: 'Maximum login without yubikey exceeded'
+    ERRORMAXYUBIKEYDAYS: 'Maximum days without yubikey exceeded'
     ERRORYUBIKEY: 'Yubikey authentication error'
+    MAXAMOUNTNOYUBI: 'If set to 0, infinite amounts is allowed.'
+    MAXNOYUBIDAYS: 'If set to 0, there is no limit on days a member is allowed to login without a Yubikey'
     NOTAVAILABLE: 'This option is not yet available'
     NOYUBIKEYCOUNT: 'Login count without yubikey'
     TITLE: 'Yubikey login'
