--- a/lang/en.yml
+++ b/lang/en.yml
@@ -7,10 +7,9 @@ en:
     ERRORMAXYUBIKEY: 'Maximum login without yubikey exceeded'
     ERRORMAXYUBIKEYDAYS: 'Maximum days without yubikey exceeded'
     ERRORYUBIKEY: 'Yubikey authentication error'
-    MAXAMOUNTNOYUBI: 'If set to 0, infinite amounts is allowed.'
-    MAXNOYUBIDAYS: 'If set to 0, there is no limit on days a member is allowed to login without a Yubikey'
     NOTAVAILABLE: 'This option is not yet available'
     NOYUBIKEYCOUNT: 'Login count without yubikey'
+    REQUIREPASSWORD: 'Require a password on login'
     TITLE: 'Yubikey login'
     YUBIKEY: 'Yubikey code'
     YUBIKEYDESCRIPTION: 'Unique identifier string for the Yubikey'
