--- a/lang/en.yml
+++ b/lang/en.yml
@@ -4,6 +4,7 @@ en:
   YubikeyAuthenticator:
     ENABLED: 'Yubikey Authentication Enabled'
     ENABLEDDESCRIPTION: 'If the user is new and doesn''t have a Yubikey yet, you can disable the auth temporarily'
+    ERROR: 'Yubikey authentication error'
     ERRORMAXYUBIKEY: 'Maximum login without yubikey exceeded'
     ERRORMAXYUBIKEYDAYS: 'Maximum days without yubikey exceeded'
     ERRORYUBIKEY: 'Yubikey authentication error'
@@ -12,4 +13,4 @@ en:
     REQUIREPASSWORD: 'Require a password on login'
     TITLE: 'Yubikey login'
     YUBIKEY: 'Yubikey code'
-    YUBIKEYDESCRIPTION: 'Unique identifier string for the Yubikey'
+    YUBIKEYDESCRIPTION: 'Unique identifier string for the Yubikey. Will reset when the Yubikey Authentication is disabled'
